@@ -1,50 +1,63 @@
 #!/bin/bash
 
+logging=false
+#If you turn logging on, be aware your gcnode.log may contain your keys!!
+
 set -eu -o pipefail # fail on error , debug all lines
 
 LOG_LOCATION=/root/
+node_folder="coti-fullnode"
+
+if [[ $logging == true ]];
+then
+echo "Logging turned on"
 exec > >(tee -i $LOG_LOCATION/gcnode.log)
 exec 2>&1
-
+fi
 
 apt-get update -y && apt-get upgrade -y
 #Install JQ which makes it easy to interpret JSON
 apt-get update -y
 apt-get install -y jq
 
-
-
-
 # For output readability
 RED=$(tput setaf 1)
 GREEN=$(tput setaf 2)
 YELLOW=$(tput setaf 3)
 COLOR_RESET=$(tput sgr0)
-new_version_tag_final=""
-new_version_tag=$(curl -s https://api.github.com/repos/coti-io/coti-node/releases/latest | jq ".tag_name")
-#Remove the front and end double quote
-new_version_tag=${new_version_tag#"\""}
-new_version_tag=${new_version_tag%"\""}
 
-#new_version_tag=1.4.1 for example
+
+function removequotes(){
+  #Remove the front and end double quote
+  version=${1#"\""}
+  version=${version%"\""}
+  echo "$version"
+}
+
+new_version_tag_final=""
+new_version_tag=$(curl -s https://api.github.com/repos/coti-io/$node_folder/releases/latest | jq ".tag_name")
+
+
+#Remove the front and end double quote
+new_version_tag=$(removequotes "$new_version_tag")
+
+API_key=""
+coti_dir=""
 
 echo "Latest version is $new_version_tag"
 
 shopt -s globstar dotglob
 
-
 cat << "MENUEOF"
+
 ███╗   ███╗███████╗███╗   ██╗██╗   ██╗
 ████╗ ████║██╔════╝████╗  ██║██║   ██║
 ██╔████╔██║█████╗  ██╔██╗ ██║██║   ██║
 ██║╚██╔╝██║██╔══╝  ██║╚██╗██║██║   ██║
 ██║ ╚═╝ ██║███████╗██║ ╚████║╚██████╔╝
 ╚═╝     ╚═╝╚══════╝╚═╝  ╚═══╝ ╚═════╝
+
 MENUEOF
-
-
-
-
 
 PS3='Please choose what node you are installing today.  Mainnet or Testnet. Mainnet is by invite only so you will definitely know if it is mainnet you should be choosing. Please write the number of the menu item and press enter: '
 mainnet="Install a node on to the COTI mainnet"
@@ -82,19 +95,19 @@ break
 done
 
 
-echo "Welome to the COTI installer .  We will begin to ask you a series of questions.  Please have to hand:"
+echo "Welcome to the COTI Node Installer .  We will begin to ask you a series of questions.  Please have to hand:"
 echo "✅ Your SSH Port No"
 echo "✅ Your Ubuntu Username"
 echo "✅ Your email address"
 echo "✅ Your server hostname from Godaddy or namecheap etc e.g. coti.mynode.com"
-echo "✅ Your wallet private key"
-echo "✅ Your wallet seed key"
+echo "✅ Your API Key if you are an exchange. If you are not an exchange, leave this empty."
+echo "✅ Your wallet private key (if you are not an exchange)"
+echo "✅ Your wallet seed key (if you are not an exchange)"
 
 if [[ $action == "mainnet" ]];
 then
 echo "✅ What version of coti node you would like to use. Coti will communicate this to you. Write latest ONLY if they tell you to use latest commited version."
 fi
-
 
 read -n 1 -r -s -p $'Press enter to begin...\n'
 
@@ -102,36 +115,108 @@ read -p "What is your ssh port number (likely 22 if you do not know)?: " portno
 read -p "What is your ubuntu username (use coti if unsure as it will be created fresh) ?: " username
 read -p "What is your email address?: " email
 read -p "What is your server host name e.g. tutorialnode.cotinodes.com?: " servername
+
+
+read -p "Exchanges may be provided with an API key.  Please enter it now, or leave it empty and press enter if you are not an exchange:" API_key
+
+# Ask for private key and seed if API key wasnt provided.
+if [[ $API_key == "" ]] || [ -z "$API_key" ];
+then
+
 read -p "What is your wallet private key?: " pkey
 read -p "What is your wallet seed?: " seed
-
-
-# If we are on mainnet, ASK for a version to use
-if [[ $action == "mainnet" ]];
-then
-read -p "Mainnet Question: What version node software would you like to use. This should have been comunicated to you from COTI. If you leave this empty and press enter the script will terminate. If entering a version number, remember it takes this format: 1.4.1 ?: " new_version_tag_final
 else
-new_version_tag_final=$new_version_tag
+pkey=""
+seed=""
 fi
+
+
+extra_vers_desc=""
+if [[ $action == "testnet" ]];
+then
+extra_vers_desc="If you leave this empty, it will use the latest version."
+elif [[ $action == "mainnet" ]];
+then
+extra_vers_desc="If you leave this empty, the script will terminate."
+
+fi
+
+read -p "What version node software would you like to use. If you are on mainnet, or if you are an exchange, this should have been communicated to you from COTI. $extra_vers_desc. If entering a version number, remember it takes this format: 1.4.1 ?: " new_version_tag_final
+
 
 # If we are on mainnet and a version isnt chosen, terminate the script
 if [[ $action == "mainnet" ]] && [[ $new_version_tag_final == "" ]];
 then
+echo "${RED}No version chosen.  Terminating script. ${COLOR_RESET}"
 exit 1
+elif [[ $action == "testnet" ]] && [[ $new_version_tag_final == "" ]];
+then
+echo "${YELLOW}No version chosen, that's ok, selecting latest version.${COLOR_RESET}"
+new_version_tag_final=$new_version_tag
 fi
 
-# If we are on mainnet and the user wrote 'latest' then it will pull the latest version!
-if [[ $action == "mainnet" ]] && [[ $new_version_tag_final == "latest" ]];
+
+# Finally if the user wrote 'latest' then it will pull the latest version!
+if [[ $new_version_tag_final == "latest" ]];
 then
 new_version_tag_final=$new_version_tag
 fi
 
-if [[ $portno == "" ]] || [[ $username == "" ]] || [[ $email == "" ]] || [[ $servername == "" ]] || [[ $pkey == "" ]] || [[ $seed == "" ]];
+echo "Chosen version is $new_version_tag_final"
+
+if [[ $portno == "" ]] || [[ $username == "" ]] || [[ $email == "" ]] || [[ $servername == "" ]];
 then
-echo "Some details were not provided.  Script is now exiting.  Please run again and provide answers to all of the questions"
+echo "${RED}Some details were not provided.  Script is now exiting.  Please run again and provide answers to all of the questions${COLOR_RESET}"
 exit 1
 fi
 
+
+if [[ $pkey == "" ]] || [[ $seed == "" ]] && [[ $API_key = "" ]];
+then
+echo "Private Key or Seed Key was not provided. Please run again and provide answers to all of the questions"
+exit 1
+fi
+
+
+#########################################
+# Create $username user if needed (Recently Moved)
+#########################################
+
+if id "$username" >/dev/null 2>&1; then
+        echo "user exists"
+else
+        echo "user does not exist...creating"
+        adduser --gecos "" --disabled-password $username
+        adduser $username sudo
+
+fi
+
+####################################
+# Create keys , seeds and mnemonics
+####################################
+
+if [[ $API_key != "" ]];
+then
+  # Its an exchange on mainnet.
+  #sudo apt-get install unzip
+  wget -O installkeygenerator.sh "https://raw.githubusercontent.com/Geordie-R/coti-full-node/New-API-Integration-v1/installkeygenerator.sh"
+  chmod +x installkeygenerator.sh
+  working_dir=$(pwd)
+  ./installkeygenerator.sh "$username"
+echo "running app.js"
+
+node /home/$username/exchange-fullnode/app.js "$API_key" "$action" "" "$(pwd)"
+
+keyspath="$working_dir/keys.json"
+echo "keyspath: $keyspath"
+
+seed=$(cat "$keyspath" | jq -r '.[].Seed')
+pkey=$(cat "$keyspath" | jq -r '.[].PrivateKey')
+mnemonic=$(cat "$keyspath" | jq -r '.[].Mnemonic')
+
+fi
+
+#echo "passed fi"
 
 #Lets pad the seeds
 
@@ -144,45 +229,39 @@ done
 echo "$x"
 }
 
-typeset -fx pad64chars
-#Newly padded seed if needed
-seed=$(pad64chars $seed)
-#Newly padded private key if needed
-pkey=$(pad64chars $pkey)
+if [[ $API_key == "" ]];
+then
 
+  typeset -fx pad64chars
+
+
+  if [[ $seed != "" ]];
+  then
+    #Newly padded seed if needed
+    seed=$(pad64chars $seed)
+  fi
+
+  if [[ $pkey != "" ]];
+  then
+    #Newly padded private key if needed
+    pkey=$(pad64chars $pkey)
+
+  fi
+fi
 # padding of seeds and key complete
 
 
-
-exec 3<>/dev/tcp/ipv4.icanhazip.com/80 
-echo -e 'GET / HTTP/1.0\r\nhost: ipv4.icanhazip.com\r\n\r' >&3 
+exec 3<>/dev/tcp/ipv4.icanhazip.com/80
+echo -e 'GET / HTTP/1.0\r\nhost: ipv4.icanhazip.com\r\n\r' >&3
 while read i
 do
- [ "$i" ] && serverip="$i" 
-done <&3 
+ [ "$i" ] && serverip="$i"
+done <&3
 
 serverurl=https://$servername
 
-#########################################
-# Create $username user if needed
-#########################################
-
-if id "$username" >/dev/null 2>&1; then
-        echo "user exists"
-else
-        echo "user does not exist...creating"
-        adduser --gecos "" --disabled-password $username
-        adduser $username sudo
-
-
-
-fi
-
-
-
 
 apt-get update -y && sudo apt-get upgrade -y
-
 
 echo "Installing prereqs..."
  sudo apt-get install \
@@ -194,6 +273,7 @@ echo "Installing prereqs..."
 
 apt-get update -y && sudo apt-get upgrade -y
 
+#curl -L -b "oraclelicense=a" -O https://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.rpm
 
 apt install openjdk-8-jdk maven nginx certbot python-certbot-nginx ufw nano git -y
 java -version
@@ -202,22 +282,40 @@ mvn -version
 ufw limit $portno
 ufw allow 80
 ufw allow 443
-ufw allow 7070
+
+if [[ $action == "testnet" ]];
+then
+  ufw allow from 52.59.142.53 to any port 7070
+elif [[ $action == "mainnet" ]];
+then
+  ufw allow from 35.157.47.86 to any port 7070
+fi
+
+
 ufw --force enable
 
 cd /home/$username/
-git clone https://github.com/coti-io/coti-fullnode.git
-chown -R $username: /home/$username/coti-fullnode/
-cd /home/$username/coti-fullnode/
+
+git clone --depth 1 --branch $new_version_tag_final https://github.com/coti-io/$node_folder/
+
+chown -R $username: /home/$username/$node_folder/
+cd /home/$username/$node_folder/
 sudo -u $username mvn initialize && sudo -u $username mvn clean compile && sudo -u $username mvn -Dmaven.test.skip=true package
 
-cat <<EOF >/home/$username/coti-fullnode/fullnode.properties
+
+logging_file_name="";
+
+if [[ $action == "testnet" ]];
+then
+
+logging_file_name="FullNode1";
+cat <<EOF-TESTNET >/home/$username/$node_folder/fullnode.properties
 network=TestNet
 server.ip=$serverip
 server.port=7070
 server.url=$serverurl
 application.name=FullNode
-logging.file.name=FullNode1
+logging.file.name=$logging_file_name
 database.folder.name=rocksDB1
 resetDatabase=false
 global.private.key=$pkey
@@ -234,51 +332,78 @@ node.manager.propagation.port=10001
 allow.transaction.monitoring=true
 whitelist.ips=127.0.0.1,0:0:0:0:0:0:0:1
 node.manager.public.key=2fc59886c372808952766fa5a39d33d891af69c354e6a5934a258871407536d6705693099f076226ee5bf4b200422e56635a7f3ba86df636757e0ae42415f7c2
-EOF
+allow.transaction.monitoring=true
+EOF-TESTNET
 
+elif [[ $action == "mainnet" ]];
+then
+logging_file_name="FullNode1";
+cat <<EOF-MAINNET >/home/$username/$node_folder/fullnode.properties
+network=MainNet
+server.ip=$serverip
+server.port=7070
+server.url=$serverurl
+application.name=FullNode
+logging.file.name=$logging_file_name
+database.folder.name=rocksDB
+global.private.key=$pkey
+fullnode.seed=$seed
+minimumFee=0.01
+maximumFee=25
+fee.percentage=0.01
+zero.fee.user.hashes=
+kycserver.public.key=c10052a39b023c8d4a3fc406a74df1742599a387c58bcea2a2093bd85103f3bd22816fa45bbfb26c1f88a112f0c0b007755eb1be1fad3b45f153adbac4752638
+kycserver.url=https://cca.coti.io
+node.manager.ip=35.157.47.86
+node.manager.port=7090
+node.manager.propagation.port=10001
+node.manager.public.key=2fc59886c372808952766fa5a39d33d891af69c354e6a5934a258871407536d6705693099f076226ee5bf4b200422e56635a7f3ba86df636757e0ae42415f7c2
+allow.transaction.monitoring=true
+EOF-MAINNET
+fi
 
 #IF mainnet lets download the dbrecovery and set db.restore to true!
-if [[ $action == "mainnet" ]];
+if [[ $action == "REMOVEDmainnet" ]];
 then
-wget -O dbrecovery.sh https://raw.githubusercontent.com/Geordie-R/coti-full-node/v2.0/dbrecovery.sh
-chmod +x dbrecovery.sh
-./dbrecovery.sh "true" "$username"
+wget -O /home/$username/dbrecovery.sh https://raw.githubusercontent.com/Geordie-R/coti-full-node/New-API-Integration-v1/dbrecovery.sh
+chmod +x /home/$username/dbrecovery.sh
+echo "Turning dbrecovery on"
+/home/$username/dbrecovery.sh "true" "$username" "$action"
 fi
 
-
-
-
-
-
-FILE=/home/$username/coti-fullnode/FullNode1_clusterstamp.csv
-if [ -f "$FILE" ]; then
-    echo "$FILE already exists, no need to download"
-else 
-    echo "$FILE does not exist, downloading now"
-    wget -q --show-progress --progress=bar:force 2>&1 https://www.dropbox.com/s/rpyercs56zmay0z/FullNode1_clusterstamp.csv -P /home/$username/coti-fullnode/
-fi
-
+echo "Moving on to clusterstamp"
 
 #########################################
 # Download Clusterstamp
 #########################################
 
-FILE=/home/$username/coti-fullnode/FullNode1_clusterstamp.csv
-if [ -f "$FILE" ]; then
-    echo "${YELLOW}$FILE already exists, no need to download the clusterstamp file ${COLOR_RESET}"
-else
-    echo "${YELLOW}$FILE does not exist, downloading the clusterstamp now... ${COLOR_RESET}"
-    wget -q --show-progress --progress=bar:force 2>&1 https://www.dropbox.com/s/rpyercs56zmay0z/FullNode1_clusterstamp.csv -P /home/$username/coti-fullnode/
+FILE=/home/$username/$node_folder/FullNode1_clusterstamp.csv
+
+cluster_url_mainnet="https://coti.tips/downloads/FullNode1_clusterstamp.csv"
+cluster_url_testnet="https://www.dropbox.com/s/rpyercs56zmay0z/FullNode1_clusterstamp.csv"
+
+if [[ $action == "testnet" ]];
+then
+  echo "${YELLOW}Downloading the clusterstamp now from ... ${COLOR_RESET}"
+  #wget "$FILE" $cluster_url_testnet
+  wget --show-progress --progress=bar:force 2>&1 $cluster_url_testnet -P /home/$username/$node_folder/
+elif [[ $action == "mainnet" ]];
+then
+echo "${YELLOW}Downloading the mainnet clusterstamp now from ... ${COLOR_RESET}"
+#  wget "$FILE" $cluster_url_mainnet
+  wget --show-progress --progress=bar:force 2>&1 $cluster_url_mainnet -P /home/$username/$node_folder/
 fi
 
+echo "Applying chgrp and chown to clusterstamp and properties"
+chown $username /home/$username/$node_folder/FullNode1_clusterstamp.csv
+chgrp $username /home/$username/$node_folder/FullNode1_clusterstamp.csv
+chown $username /home/$username/$node_folder/fullnode.properties
+chgrp $username /home/$username/$node_folder/fullnode.properties
+
+echo "Moving on to NGINX"
 
 
-
-chown $username /home/$username/coti-fullnode/FullNode1_clusterstamp.csv
-chgrp $username /home/$username/coti-fullnode/FullNode1_clusterstamp.csv
-chown $username /home/$username/coti-fullnode/fullnode.properties
-chgrp $username /home/$username/coti-fullnode/fullnode.properties
-
+#NGINX Setup
 
 certbot certonly --nginx --non-interactive --agree-tos -m $email -d $servername
 
@@ -326,12 +451,15 @@ sed -i "s:ssl_key:ssl_certificate_key /etc/letsencrypt/live/$servername/privkey.
 
 service nginx restart
 
+
+#SYSTEMD service to run the node
+
 cat <<EOF >/etc/systemd/system/cnode.service
 [Unit]
 Description=COTI Fullnode Service
 [Service]
-WorkingDirectory=/home/$username/coti-fullnode/
-ExecStart=/usr/bin/java -Xmx256m -jar /home/$username/coti-fullnode/fullnode/target/fullnode-$new_version_tag_final.RELEASE.jar --spring.config.additional-location=fullnode.properties
+WorkingDirectory=/home/$username/$node_folder/
+ExecStart=/usr/bin/java -Xmx1024M -XX:MaxPermSize=256M -jar /home/$username/$node_folder/fullnode/target/fullnode-$new_version_tag_final.RELEASE.jar --spring.config.additional-location=fullnode.properties
 SuccessExitStatus=143
 User=$username
 Restart=on-failure
@@ -345,17 +473,17 @@ systemctl enable cnode.service
 systemctl start cnode.service
 echo "Waiting for Coti Node to Start"
 sleep 5
-tail -f /home/$username/coti-fullnode/logs/FullNode1.log | while read line; do
-echo $line  
-echo ${GREEN}$line{COLOR_RESET}| grep -q 'COTI FULL NODE IS UP' && break;
+log_path="/home/$username/$node_folder/logs/$logging_file_name.log"
+echo "Viewing $log_path #<#<#"
+tail -f $log_path | while read line; do
+echo $line
+echo ${GREEN}$line${COLOR_RESET}| grep -q 'COTI FULL NODE IS UP!!' && break;
 
 done
 
 #IF mainnet lets set db.restore to false!
-if [[ $action == "mainnet" ]];
+if [[ $action == "REMOVEDmainnet" ]];
 then
-./dbrecovery.sh "false" "$username"
+echo "Turning dbrecovery off"
+/home/$username/dbrecovery.sh "false" "$username" "$action"
 fi
-
-sleep 2
-echo "Your node is registered and running on the COTI Network"
